test/types/range/elliot/rangeLength/uintRangeLength.good
0
0
1
1
255
255
256

0
0
1
1
65535
65535
65536

0
0
1
1
4294967295
4294967295
4294967296

0
0
1
1
18446744073709551615
18446744073709551615
0
uintRangeLength.chpl:26: error: halt reached - range.size exceeds max(int(64))
